--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">    
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="root"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
